# tapanda3d

./: .gitignore  README.md  bullet.py  camera.py  camerabuttons.py  cameracontroller.py  collisiongroups.py  collsiongroups.py  customcollisionpolygon.py  custompolygon.py  customrigidpolygon.py  detectors.py  entityloader.py  main.py  moverdetectors.py  mycollisionhandlerpusher.py  nodesexample.py  phyisics.py  picker.py  scheduletask.py  selectionitem.py  selectionmodes.py  selector.py  sphere.py  spheres.py  sync_from_gitlab.sh  target.py  terraincolision.py  terrainrigidbody.py  terrainselector.py
laser_ci/: .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  docker-compose.yml  jenkins.config.env  trigger_examples.py
laser_ci/.github/: copilot-instructions.md
laser_ci/configs/: lasergun.ini  lasershark.ini
laser_ci/docker/artifactory/: system.yaml
laser_ci/docker/ci-builder/: Dockerfile
laser_ci/docker/gitlab-runner/: config.toml.example
laser_ci/docker/jenkins/: Dockerfile  Jenkinsfile  Jenkinsfile-ollama  casc.yaml  entrypoint.sh  init.groovy  jenkins-job-config.xml  jenkins-job-ollama-config.xml  jenkins.config.env.example
laser_ci/docker/jfrog/: README.md  jfrog.env.config  jfrog.env.config.example
laser_ci/docker/ollama/: Dockerfile  (+1 more)
laser_ci/docs/: JENKINS_SETUP.md  JFROG_SETUP.md  MANUAL_SETUP.md  PIPELINE_TRIGGER_GUIDE.md  QUICK_REFERENCE.md  TRIGGER_EXAMPLE.json  gemini-code-1778536460134.md  trigger_examples.py
laser_ci/pipelines/: .gitlab-ci-simplified.yml
laser_ci/scripts/: check_pipeline.sh  test-runner.sh
(+226 files in other folders)
